# vaudou

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
cli/: CMakeLists.txt  cli.c
cli/builtin/: ftp-server.lua  gen-meta.lua
ed/: CMakeLists.txt  ed.c  ed.h  sdl_window_container.c  sdl_window_container.h
edlib/: CMakeLists.txt  project.h
ext/: CMakeLists.txt
ext/amd_vma/: CMakeLists.txt  vk_mem_alloc.cpp
ext/imgui-1.91.3/: CMakeLists.txt
ext/luajit/: CMakeLists.txt
ext/luajit/osx-arm64/: luajit
ext/luajit/win64/: buildvm.exp  buildvm.lib  lua51.exp  lua51.lib  luajit.exp  luajit.lib  luajit_relver.txt  minilua.exp  minilua.lib
ext/luajit/win64/lua/jit/: vmdef.lua
ext/utest/: CMakeLists.txt
lib/: CMakeLists.txt  allocator.c  allocator.h  arena.c  arena.h  array.h  common.h  delegate.h  fmt.c  fmt.h  handlemap.c  handlemap.h  hash.h  interface.h  intmap.c  intmap.h  str.c  str.h  strmap.c  strmap.h  sys.c  sys.h  test.h  vd_atomic.h  vd_buddy_alloc.h  vd_c.h  vd_common.h  vd_fmt.h  vd_list.h  vd_log.h  vd_meta.h  vd_net.h  vd_sysutil.h  vd_vk.h
modules/: CMakeLists.txt
modules/vd-imgui/: CMakeLists.txt
modules/vd-imgui/imguic/: module_internal.cpp  module_internal.h
modules/vd-imgui/vd-imgui/: module.c  module.h  module_internal.cpp  module_internal.h
modules/vd-imgui/vd-imgui/shd/: gui.frag  gui.vert
ng/: CMakeLists.txt
ng/inc/: builtin.h  cvar.h  input.h  instance.h  log.h  mm.h  ng_cfg.h  renderer.h  subsystem.h  system.h  vulkan_helpers.h
ng/inc/interface/: iwindow_subsystem.h
ng/inc/r/: deletion_queue.h  descriptor_allocator.h  types.h
ng/shd/: pbropaque.frag  pbropaque.vert  vd.glsl  vd.structs.glsl
ng/src/: builtin.c  cvar.c  default_shaders.h  instance.c  mm.c  renderer.c  subsystem.c
ng/src/r/: deletion_queue.c  deletion_queue.h  descriptor_allocator.c  descriptor_allocator.h  geo_system.c  geo_system.h  smat.c  smat.h  srg.h  sshader.c  sshader.h  svma.c  svma.h  texture_system.c  texture_system.h  types.c
rhi/: CMakeLists.txt
rhi/rhi/: interface.h
rhi/test/: CMakeLists.txt  rhi.general.c
rhi/vulkan/: CMakeLists.txt  rhi_vulkan.c  rhi_vulkan.h
scripts/: build.bat  build.sh  configure.bat  configure.sh  cv_text_to_literal.lua
shdc/: CMakeLists.txt  shdc.c  shdc.h
test/: CMakeLists.txt  lib.array.c  lib.buddy_alloc.c  lib.delegate.c  lib.fmt.c  lib.map.c  lib.meta.c  lib.str.c  lib.sys.c  test_main.c
tools/: CMakeLists.txt
w_sdl/: CMakeLists.txt  w_sdl.c  w_sdl.h
